--- a/css/scss/contact.scss
+++ b/css/scss/contact.scss
@@ -1,3 +1,4 @@
+img_box
 #contact {
 	margin-top: 70px;
 
@@ -51,7 +52,7 @@
 						background: #252528;
 					}
 				}
-			} 
+			}
 		}
 	}
 
@@ -64,7 +65,7 @@
 
 		.box {
 			margin: 0;
-			
+
 			input {
 				&[type="text"] {
 					padding-left: 39px;
@@ -232,7 +233,7 @@
 /* Responsive
 -------------------------------------------------- */
 
-@media (max-width: 767px) {	
+@media (max-width: 767px) {
 	#contact {
 		.contact {
 			.submit {
@@ -241,8 +242,8 @@
 				}
 
 				.right {
-					float: none; 
-					
+					float: none;
+
 					input[type="submit"] {
 						margin: 0 auto;
 						float: none;
