--- a/css/compiled/index.css
+++ b/css/compiled/index.css
@@ -514,4 +514,11 @@
   #showcase .features_op1_row .last {
     margin-bottom: 0; } }
 
+      #intro {
+
+   font-size: 18px;
+   line-height: 1.8em;
+
+}
+
 
