--- a/css/scss/theme.scss
+++ b/css/scss/theme.scss
@@ -265,7 +265,7 @@ header {
 
 		.footer_header {
 			text-align: left;
-			margin-left: 35px;
+			margin-left: Opx;
 		}
 
 		input[type="text"], textarea {
