--- a/css/scss/theme.scss
+++ b/css/scss/theme.scss
@@ -264,8 +264,8 @@ header {
 		text-align: right;
 
 		.footer_header {
-			text-align: left;
-			margin-left: Opx;
+			text-align: right;
+			margin-left: 30px;
 		}
 
 		input[type="text"], textarea {
