--- a/css/scss/theme.scss
+++ b/css/scss/theme.scss
@@ -266,6 +266,7 @@ header {
 		.footer_header {
 			text-align: right;
 			margin-left: 30px;
+      margin-right: 0px;
 		}
 
 		input[type="text"], textarea {
