--- a/css/scss/theme.scss
+++ b/css/scss/theme.scss
@@ -168,6 +168,10 @@ header {
 	}
 }
 
+.navbar-brand {
+  width: 2;
+  height: 2;
+}
 
 /* Footer
 -------------------------------------------------- */
