--- a/css/scss/services.scss
+++ b/css/scss/services.scss
@@ -45,7 +45,7 @@
 
 				span {
 					&.circle {
-						background: rgba(17, 137, 217, 0.8);
+						background: rgba(61, 58, 50, 0.5));
 						width: 48px;
 						height: 48px;
 						display: none;
@@ -68,12 +68,7 @@
 				}
 			}
 
-			&:hover {
-				span {
-					&.circle {
-						display: block;
-					}
-				}
+
 
 				.img_box {
 					box-shadow: 0px 0px 1px 100px black inset;
@@ -160,7 +155,7 @@
 	.section_header {
 		h3 {
 			margin:0;
-			
+
 			span {
 				font-size: 18px;
 				line-height: 20px;
@@ -243,8 +238,8 @@
 		.description_wrapper {
 			width: 77%;
 		}
-	} 
-	
+	}
+
 	#process {
 		.areas {
 			text-align: center;
@@ -294,7 +289,7 @@
 				}
 			}
 		}
-	}	
+	}
 
 	#service_2 {
 		.perk {
@@ -314,7 +309,7 @@
 			}
 		}
 	}
-	
+
 	#process {
 		.areas {
 			margin-top: 193px;
