--- a/css/scss/services.scss
+++ b/css/scss/services.scss
@@ -108,7 +108,7 @@
 	}
 
 	.circle {
-		background: #1189D9;
+		background: #3D3A32;
 		text-align: center;
 		border-radius: 100%;
 		margin: 14px 0 0 0;
@@ -200,7 +200,7 @@
 			margin-right: -45px;
 			text-align: center;
 			width: 210px;
-			background: rgba(37, 37, 40, 0.9);
+			background: rgba(61, 58, 50, 0.5);
 			border-radius: 100%;
 			-webkit-transition: all .3s;
 			-moz-transition: all .3s;
